agregue una mediaqueries para dispositivos pequeños

--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,11 @@ html{
 #pausa:active{
     background-color: lightcoral;
 }
+
+@media all and (max-width: 767px) {
+    .reloj {
+      width: 50%;
+    }
+
+    
+  }
